--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <!-- <link rel="icon" href="../src/img/favicon.png" /> -->
-  <link rel="shortcut icon" href="../src/img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../src/img/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
